#3 Fix:  Changed sidebar widht and set height, sidebar collapse on smaller screens

--- a/style/layout.css
+++ b/style/layout.css
@@ -1,5 +1,12 @@
 .app {
   display: grid;
-  grid-template-columns: 200px 1fr;
+  grid-template-columns: 250px 1fr;
+  /* TODO: Delete border after layout is approved. Border has presentational purpose */
   border: 1px solid;
+}
+
+@media (max-width: 992px) {
+  .app {
+    grid-template-columns: 50px 1fr;
+  }
 }
